# MultiThreading

./: CMakeLists.txt
include/: Matrix_mul.h
src/: log.txt  main.cpp
tst/: BoardTest.cpp  CMakeLists.txt  ComputerTest.cpp  PlayerTest.cpp
